refactor: rename project to intellij-webassembly-plugin
Updated project name from web-assembly-plugin to intellij-webassembly-plugin for consistency
- settings.gradle.kts: updated rootProject.name
- plugin.xml: updated plugin ID
- install-plugin.sh: updated build artifact path and installation directory
- developer_environment.md: updated directory references
- GC_IMPLEMENTATION_SUMMARY.md: updated distribution path references

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin package="com.intellij.webassembly">
-  <id>com.jetbrains.webstorm.web-assembly-plugin</id>
+  <id>com.jetbrains.webstorm.intellij-webassembly-plugin</id>
   <name>WebAssembly</name>
   <vendor>JetBrains</vendor>
 
