feat(major): add run configuration for .wat files
Implements a complete run configuration system that allows users to execute
WebAssembly text (.wat) files directly from the IDE:

- Compiles .wat to .wasm using wat2wasm (from WABT toolkit)
- Executes the compiled WASM module using Node.js
- Automatically calls the exported main() function
- Displays output in the IDE's Run tool window

Components added:
- WebAssemblyRunConfigurationType: Main configuration type
- WebAssemblyRunConfiguration: Configuration data model
- WebAssemblySettingsEditor: UI for configuring the run settings
- WebAssemblyRunState: Handles compilation and execution pipeline

Prerequisites:
- WABT (brew install wabt) for wat2wasm compiler
- Node.js for WASM runtime execution

Includes example file and comprehensive documentation.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -56,6 +56,9 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
     <completion.contributor language="WebAssembly"
                             implementationClass="com.intellij.webassembly.lang.WebAssemblyKeywordCompletionContributor"/>
 
+    <!-- Run Configuration -->
+    <configurationType implementation="com.intellij.webassembly.run.WebAssemblyRunConfigurationType"/>
+
   </extensions>
 
   <actions>
