--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -58,6 +58,7 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
 
     <!-- Run Configuration -->
     <configurationType implementation="com.intellij.webassembly.run.WebAssemblyRunConfigurationType"/>
+    <runConfigurationProducer implementation="com.intellij.webassembly.run.WebAssemblyRunConfigurationProducer"/>
 
   </extensions>
 
