fix: add missing ProgramRunner for run configuration support
The run configuration was not appearing in context menus or the add configuration
dialog because it was missing a ProgramRunner implementation.

Changes:
- Added WebAssemblyProgramRunner extending DefaultProgramRunner
- Registered programRunner in plugin.xml
- Fixed ConfigurationProducer to use registered extension instance
- Added getOptionsClass() override in ConfigurationFactory
- Made ConfigurationType ID a constant for better maintainability

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -59,6 +59,7 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
     <!-- Run Configuration -->
     <configurationType implementation="com.intellij.webassembly.run.WebAssemblyRunConfigurationType"/>
     <runConfigurationProducer implementation="com.intellij.webassembly.run.WebAssemblyRunConfigurationProducer"/>
+    <programRunner implementation="com.intellij.webassembly.run.WebAssemblyProgramRunner"/>
 
   </extensions>
 
