feat(major): add live templates for WebAssembly constructs
Implemented comprehensive live template support for common WebAssembly
expressions and constructs to enhance developer productivity:

Template categories added:
- Module structure: module, import, export, func, fn
- Constants: i32, i64, f32, f64
- Variables: local, global, param, result, lget, lset, ltee, gget, gset
- Control flow: if, loop, block, call
- Memory operations: load, store, memory, table

Templates include placeholders with sensible defaults and support
tab-navigation between fields. Context-aware activation ensures
templates only appear in .wat/.wast files.

Files modified:
- Created WebAssembly.xml with 28 live templates
- Created WebAssemblyTemplateContextType.kt for context detection
- Updated plugin.xml to register template system

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -56,6 +56,10 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
     <completion.contributor language="WebAssembly"
                             implementationClass="com.intellij.webassembly.lang.WebAssemblyKeywordCompletionContributor"/>
 
+    <!-- Live Templates -->
+    <defaultLiveTemplates file="/liveTemplates/WebAssembly.xml"/>
+    <liveTemplateContext contextId="WebAssembly" implementation="com.intellij.webassembly.lang.WebAssemblyTemplateContextType"/>
+
     <!-- Run Configuration -->
     <configurationType implementation="com.intellij.webassembly.run.WebAssemblyRunConfigurationType"/>
     <runConfigurationProducer implementation="com.intellij.webassembly.run.WebAssemblyRunConfigurationProducer"/>
