--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,15 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
               language="WebAssembly"
               extensions="wat;wast"/>
 
+    <!-- Binary WebAssembly (.wasm) files -->
+    <fileType name="WebAssembly Binary"
+              implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileType"
+              fieldName="INSTANCE"
+              extensions="wasm"/>
+
+    <filetype.decompiler filetype="WebAssembly Binary"
+                         implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileDecompiler"/>
+
     <lang.parserDefinition language="WebAssembly"
                            implementationClass="com.intellij.webassembly.lang.parser.WebAssemblyParserDefinition"/>
 
