--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -41,6 +41,9 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
     <filetype.decompiler filetype="WebAssembly Binary"
                          implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileDecompiler"/>
 
+    <lang.substitutor language="TEXT"
+                      implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryLanguageSubstitutor"/>
+
     <lang.parserDefinition language="WebAssembly"
                            implementationClass="com.intellij.webassembly.lang.parser.WebAssemblyParserDefinition"/>
 
