feat(major): implement syntax highlighting for .wasm files with auto-increment versioning
Replace binary decompiler approach with FileViewProviderFactory to enable
proper WebAssembly syntax highlighting for decompiled .wasm files.

Changes:
- Replace BinaryFileDecompiler with FileViewProviderFactory for .wasm files
- Set .wasm files as read-only (isBinary=false, isReadOnly=true)
- Auto-increment patch version on each build via version.properties
- Update install-plugin.sh to detect version dynamically

This provides colorized syntax highlighting for .wasm binary files by
decompiling them to WAT format using wasm-tools and applying WebAssembly
language highlighting to the output.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -38,11 +38,8 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
               fieldName="INSTANCE"
               extensions="wasm"/>
 
-    <filetype.decompiler filetype="WebAssembly Binary"
-                         implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileDecompiler"/>
-
-    <lang.substitutor language="TEXT"
-                      implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryLanguageSubstitutor"/>
+    <fileType.fileViewProviderFactory filetype="WebAssembly Binary"
+                                      implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileViewProviderFactory"/>
 
     <lang.parserDefinition language="WebAssembly"
                            implementationClass="com.intellij.webassembly.lang.parser.WebAssemblyParserDefinition"/>
