--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -38,8 +38,7 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
               fieldName="INSTANCE"
               extensions="wasm"/>
 
-    <fileType.fileViewProviderFactory filetype="WebAssembly Binary"
-                                      implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileViewProviderFactory"/>
+    <fileEditorProvider implementation="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileEditorProvider"/>
 
     <lang.parserDefinition language="WebAssembly"
                            implementationClass="com.intellij.webassembly.lang.parser.WebAssemblyParserDefinition"/>
