feat(major): make .wasm files editable with auto-recompilation on save
Add full edit/save/recompile cycle for .wasm binary files:

When you open a .wasm file:
- Shows decompiled WAT text with syntax highlighting
- Editor is now EDITABLE (not read-only)
- You can modify the WAT code

When you save (Cmd+S):
- Automatically compiles WAT → WASM using wasm-tools parse
- Updates the original .wasm binary file
- Shows compilation errors if WAT is invalid

Implementation:
- WebAssemblyBinaryFileEditor: Custom editor managing WAT/WASM lifecycle
- WebAssemblyBinarySaveListener: Intercepts document saves and triggers recompilation
- Set isReadOnly=false on WebAssemblyBinaryFileType
- Uses LightVirtualFile for in-memory WAT representation

This enables a round-trip workflow: WASM → WAT (decompile) → edit → WAT → WASM (recompile)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -26,6 +26,8 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
   </description>
 
   <extensions defaultExtensionNs="com.intellij">
+    <applicationService serviceImplementation="com.intellij.webassembly.lang.psi.WebAssemblyBinarySaveListener"/>
+
     <fileType name="WebAssembly file"
               implementationClass="com.intellij.webassembly.lang.psi.WebAssemblyFileType"
               fieldName="INSTANCE"
