feat(minor): add WIT syntax highlighting support
Added WebAssembly Interface Type (WIT) syntax highlighting to the plugin:
- Created WIT language definition and file type
- Integrated WIT lexer from wit-jetbrains-plugin
- Added syntax highlighter for WIT keywords, types, and literals
- Updated plugin description to mention WIT support
- Configured build system to generate WIT lexer from flex grammar

WIT files (.wit) now have full syntax highlighting for:
- Keywords (package, interface, world, func, type, etc.)
- Builtin types (u8, u16, u32, u64, s8, s16, s32, s64, float32, float64, string, etc.)
- Comments (line, doc, block)
- Literals (strings, numbers, versions)
- Identifiers and names

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,11 +12,12 @@
     <p>Provides <a href="https://webassembly.org/">WebAssembly</a> language support to all JetBrains IDEs that <a href="https://www.jetbrains.com/products/#lang=js&type=ide">support JavaScript</a>.
 <h2>Features</h2>
 <ul>
-  <li>Syntax highlighting
+  <li>Syntax highlighting for WAT, WAST, and WIT files
   <li>Brace matching, commenting, and code folding
   <li>Code completion
   <li>References and navigation
   <li>Bulk instructions and reference types support
+  <li>WIT (WebAssembly Interface Type) syntax highlighting
 </ul>
 
 <h2>Getting started</h2>
@@ -42,11 +43,25 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
 
     <fileEditorProvider implementation="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileEditorProvider"/>
 
+    <!-- WIT (WebAssembly Interface Type) files -->
+    <fileType name="WIT file"
+              implementationClass="com.intellij.webassembly.wit.WitFileType"
+              fieldName="INSTANCE"
+              language="WIT"
+              extensions="wit"/>
+
     <lang.parserDefinition language="WebAssembly"
                            implementationClass="com.intellij.webassembly.lang.parser.WebAssemblyParserDefinition"/>
 
     <lang.syntaxHighlighterFactory language="WebAssembly"
                                    implementationClass="com.intellij.webassembly.ide.WebAssemblySyntaxHighlighterFactory"/>
+
+    <!-- WIT language support -->
+    <lang.parserDefinition language="WIT"
+                           implementationClass="com.intellij.webassembly.wit.WitParserDefinition"/>
+
+    <lang.syntaxHighlighterFactory language="WIT"
+                                   implementationClass="com.intellij.webassembly.wit.WitSyntaxHighlighterFactory"/>
 
     <colorSettingsPage implementation="com.intellij.webassembly.ide.colors.WebAssemblyColorSettingPage"/>
 
