fix: resolve toolchain detection in IntelliJ environments
IntelliJ IDEA doesn't always have Homebrew paths in PATH, causing
'No WebAssembly toolchain found' errors even when tools are installed.

Changes:
- Added findToolPath() to search common installation locations
  (/opt/homebrew/bin, /usr/local/bin, /usr/bin, ~/.cargo/bin)
- Store resolved full paths in cache to avoid repeated lookups
- Fixed WIT file type registration (name mismatch: 'WIT file' -> 'WIT')
- Updated implementationClass to correct object path

Fixes toolchain detection for macOS ARM/Intel Homebrew installations.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -44,8 +44,8 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
     <fileEditorProvider implementation="com.intellij.webassembly.lang.psi.WebAssemblyBinaryFileEditorProvider"/>
 
     <!-- WIT (WebAssembly Interface Type) files -->
-    <fileType name="WIT file"
-              implementationClass="com.intellij.webassembly.wit.WitFileType"
+    <fileType name="WIT"
+              implementationClass="com.intellij.webassembly.wit.WitElementTypes$WitFileType"
               fieldName="INSTANCE"
               language="WIT"
               extensions="wit"/>
