fix: correct WitFileType class reference in plugin.xml
WitFileType is defined as a top-level object in WitElementTypes.kt, not as a nested class.
Changed from WitElementTypes$WitFileType to WitFileType to fix ClassNotFoundException.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -45,7 +45,7 @@ For IntelliJ IDEA, you can check out this section in the <a href="https://www.je
 
     <!-- WIT (WebAssembly Interface Type) files -->
     <fileType name="WIT"
-              implementationClass="com.intellij.webassembly.wit.WitElementTypes$WitFileType"
+              implementationClass="com.intellij.webassembly.wit.WitFileType"
               fieldName="INSTANCE"
               language="WIT"
               extensions="wit"/>
